force-app/main/default/objects/Off_MLS_Evidence__c/Off_MLS_Evidence__c.object-meta.xml
<CustomObject>
    <label>Off MLS Evidence</label>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Off MLS Evidence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Off MLS Evidence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>