force-app/main/default/objects/Off_MLS_Evidence__c/fields/Evidence__c.field-meta.xml
<CustomField>
    <fullName>Evidence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Off MLS Evidence</relationshipLabel>
    <relationshipName>Off_MLS_Evidence</relationshipName>
    <type>Lookup</type>
</CustomField>