force-app/main/default/objects/Off_MLS_Evidence__c/fields/SMS_Compliance_Violation__c.field-meta.xml
<CustomField>
    <fullName>SMS_Compliance_Violation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SMS Compliance Violation</label>
    <referenceTo>Compliance_Violation__c</referenceTo>
    <relationshipLabel>Off MLS Evidences</relationshipLabel>
    <relationshipName>Off_MLS_Evidences</relationshipName>
    <type>Lookup</type>
</CustomField>